# edd-pr-3

./: CMakeLists.txt
codi-pr-3/: ArbreBinari.cpp  ArbreBinari.h  CercadorMoviesAB.cpp  CercadorMoviesAB.h  CercadorMoviesHeap.cpp  CercadorMoviesHeap.h  MinHeap.cpp  MinHeap.h  Movie.cpp  Movie.h  NodeBinari.cpp  NodeBinari.h  NodeHeap.cpp  NodeHeap.h  main.cpp  main.out
